entry wrap issue

--- a/ZDO.CHSite/wwwroot/dev-style/entry.less
+++ b/ZDO.CHSite/wwwroot/dev-style/entry.less
@@ -68,6 +68,7 @@
   white-space: nowrap;
   line-height: 1.5em;
   font-size: 150%;
+  white-space: pre-wrap;
 }
 
 .sense-ix {
